--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <body>
     <div class="content">
         <h1>欢迎来使用金禧校园外卖</h1>
-        <img src="https://i.postimg.cc/rF50j1wx/image.png" width="50" height="50" alt="外卖美食" />
+        <img src="金禧.png" width="50" height="50" alt="外卖美食" />
         <p>
 小程序，App即将上线，欢迎大家使用
         </p>
